create github pages

--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
             <div class="col-12 col-md">
                 <div class="text-wrapper text-center">
                     <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>Я жду Вас в своей команде инвесторов</strong></h1>
-                    <p class="mbr-text mbr-fonts-style display-7">Я  лично инвестировала в Антарес 2500 долларов в данный момент моя цель купить пакет на 5000. В моей команде есть партнеры кто купил пакеты на 20000 долларов а это означает что их ежедневный пассивный доход составляет около 200 долларов. Активных инвесторов я добавляю в Телеграм чат с лидерами где мы растем и развиваемся вместе. При регистрации <span color_blue="">указывайте номер мессенджера</span> для того чтобы я смогла с Вами связаться.  В моей команде принято поощрать людей поэтому действует <span>бонус на первое пополнение</span>.</p>
+                    <p class="mbr-text mbr-fonts-style display-7">Я  лично инвестировала в Антарес 2500 долларов в данный момент моя цель купить пакет на 5000. В моей команде есть партнеры,  кто доверился и купил пакеты на 20000 долларов, а это означает, что их    пассивный доход составляет около 200 долларов ежедневно.  Активных инвесторов я добавляю в Телеграм чат с лидерами, где мы растем и развиваемся вместе. При регистрации <span color_blue="">указывайте номер мессенджера,</span> для того чтобы я смогла с Вами связаться.  В моей команде принято поощрать людей, поэтому действует <span>бонус на первое пополнение</span>.</p>
                     <div class="mbr-section-btn mt-3"><a class="btn btn-success display-7" href="https://antares.trade/personal/?signup=RU013125351" target="_blank">Вступить в команду</a></div>
                 </div>
             </div>
