--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                             <p class="mbr-fonts-style display-7">Ровно 18 лет назад я стала руководителем и собственником   одной небольшой компании, которая и до сих успешно работает. Альфа Телеком Инфосервис, так она называется, является эксклюзивным дилером ПАО МеГаФОн. Что это означает? Это значит, что оператор нам предоставил эксклюзивное право открывать фирменные салоны по всей республике Карелия. <br><br>В салонах, их у нас 18, мы подключаем и обслуживаем абонентов. Абоненты к нам приходят с различными вопросами и непростыми ситуациями. <br>Все течет, все меняется. Абсолютно поменялся рынок. Многие люди теперь получают большинство сервисов в своем личном кабинете. <br>За время работы у нас появился достаточный багаж знаний, мы постоянно повышаем свою квалификацию. Мы стали искать для себя новые направления. <br>Честно скажу, пришлось повыбирать.</p>
                         </div>
                         <div class="user_name mbr-fonts-style mb-2 display-7">
-                            <strong>Ольга Кузмина</strong></div>
+                            <strong>Ольга Кузьмина</strong></div>
                         <div class="user_desk mbr-fonts-style display-7">
                             Интернет предприниматель</div>
                     </div>
