--- a/index.html
+++ b/index.html
@@ -365,10 +365,10 @@
                             <img src="assets/images/img-20200831-wa0026-1-400x254-min-144x144.jpg" alt="Аватарка">
                         </div>
                         <div class="user_text mb-4">
-                            <p class="mbr-fonts-style display-7">Ровно 18 лет назад я стала руководителем и собственником   одной небольшой компании, которая и до сих успешно работает. Альфа Телеком Инфосервис, так она называется, является эксклюзивным дилером ПАО МеГаФОн. Что это означает? Это значит, что оператор нам предоставил эксклюзивное право открывать фирменные салоны по всей республике Карелия. <br><br>В салонах, их у нас 18, мы подключаем и обслуживаем абонентов. Абоненты к нам приходят с различными вопросами и непростыми ситуациями. <br>Все течет, все меняется. Абсолютно поменялся рынок. Многие люди теперь получают большинство сервисов в своем личном кабинете. <br>За время работы у нас появился достаточный багаж знаний, мы постоянно повышаем свою квалификацию. Мы стали искать для себя новые направления. <br>Честно скажу, пришлось повыбирать.</p>
+                            <p class="mbr-fonts-style display-7">Ровно 18 лет я стала руководителем и собственником   одной небольшой компании, которая и до сих успешно работает. Альфа Телеком Инфосервис, так она называется, является эксклюзивным дилером ПАО МеГаФОн. Что это означает? Это значит, что оператор нам предоставил эксклюзивное право открывать фирменные салоны по всей республике Карелия. <br><br>В салонах, их у нас 18, мы подключаем и обслуживаем абонентов. Абоненты к нам приходят с различными вопросами и непростыми ситуациями. <br>Все течет, все меняется. Абсолютно поменялся рынок. Многие люди теперь получают большинство сервисов в своем личном кабинете. <br>За время работы у нас появился достаточный багаж знаний, мы постоянно повышаем свою квалификацию. Мы стали искать для себя новые направления. <br>Честно скажу, пришлось повыбирать.</p>
                         </div>
                         <div class="user_name mbr-fonts-style mb-2 display-7">
-                            <strong>Ольга Кузьмина</strong></div>
+                            <strong>Ольга Кузмина</strong></div>
                         <div class="user_desk mbr-fonts-style display-7">
                             Интернет предприниматель</div>
                     </div>
@@ -601,9 +601,7 @@
                 <a href="https://www.facebook.com/solnechnyi.gorod" target="_blank">
                     <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon" style=""></span>
                 </a>
-                <a href="https://vk.com/okuzmina74" target="_blank">
-                    <span class="mbr-iconfont mbr-iconfont-social socicon-vkontakte socicon" style=""></span>
-                </a>
+            
                 <a href="https://t.me/VeryrichOlga030774" target="_blank">
                     <span class="mbr-iconfont mbr-iconfont-social socicon-telegram socicon"></span>
                 </a>
@@ -687,9 +685,7 @@
   
 
    <a href="https://www.facebook.com/solnechnyi.gorod" class="custom0" target="_blank"><z><span class="mbr-iconfont socicon-facebook socicon" style="color: rgb(248, 248, 248); fill: rgb(248, 248, 248);"></span></z></a>
-  <a href="https://vk.com/okuzmina74" class="custom1" target="_blank"><z><span class="mbr-iconfont fa-vk fab fa-fw" style="color: rgb(248, 248, 248); fill: rgb(248, 248, 248);"></span></z></a>
   <a href="https://www.youtube.com/channel/UCvTAr_PDXuVepFjYAv6NkRw?view_as=subscriber" class="custom2" target="_blank"><z><span class="mbr-iconfont fa-youtube fab fa-fw" style=""></span></z></a>
-  <a href="https://www.instagram.com/crawd_olgakuzmina/" class="custom3" target="_blank"><z><span class="mbr-iconfont socicon-instagram socicon" style="color: rgb(248, 248, 248); fill: rgb(248, 248, 248);"></span></z></a>
   <a href="https://t.me/VeryrichOlga030774" class="custom4" target="_blank"><z><span class="mbr-iconfont socicon-telegram socicon" style=""></span></z></a>
   <a href="https://wa.me/79217006868" class="custom5"><z><span class="mbr-iconfont socicon-whatsapp socicon" style=""></span></z></a>
  </div>  
@@ -758,6 +754,7 @@ function myFunction() {
   <script src="assets/playervimeo/vimeo_player.js"></script>
   <script src="assets/sociallikes/social-likes.js"></script>
   <script src="assets/theme/js/script.js"></script>
+  <script src="assets/witsec-mailform/witsec-mailform.js"></script>
   
   
   
